Statistics now uses thread-safe collections and are syncronized when iterating them